--- a/index.html
+++ b/index.html
@@ -2,7 +2,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+.header {
+  text-align: center;
+  padding: 32px;
+}
+
+.content{
+	justify-content: center;
+	display: flex;
+    flex-wrap: wrap;
+}
+
+p {
+	text-align: center;
+	margin-block-start: 0em;
+}
+
+iframe {
+width: 300px;
+height: 190px;
+}
+
+img{
+width: 300px;
+height: 190px;
+}
+</style>
+
 </head>
 <body>
 
