--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@ iframe {
 width: 300px;
 height: 190px;
 }
-
+.item{
+padding: 5px;
+}
+		
 img{
 width: 300px;
 height: 190px;
@@ -48,12 +51,6 @@ height: 190px;
 
 <div class="content"> 
 
-<div class="item">
-	<a href="https://drive.google.com/file/d/1P4ta6h2JlWUJSgjlmLn072POawdtaeG0/preview" target="_blank">
-		<img   src="https://drive.google.com/thumbnail?id=1A15kLHYuIDlHmY436x99atSnX0Soz5m_">
-	</a>
-	<p>test template</p>
-</div>
 
 <div class="item"> <a href="https://drive.google.com/file/d/16u7KnRcA5PsmmRL2sksnsRctA9KCmR4_/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1cK-oJMhnnL7Ue2EyhgMRnAm_DD9IL1ua"></a><p>Anam Nasim</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1FdWeK5muI_cLx1_SPc2e40h2RNBiqYVI/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1-WNadMRT54N-H5I7ddTdWV0QzQb78FlY"></a><p>Rajat Verma</p></div>
