--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
 <head>
 	<style>
+@import "https://fonts.googleapis.com/css?family=Roboto+Condensed:700i,700,400";
+@import "https://fonts.googleapis.com/css?family=Roboto:700,700i,300i,300";
+		
 * {
   box-sizing: border-box;
 }
