--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
 	<style>
 @import "https://fonts.googleapis.com/css?family=Roboto+Condensed:700i,700,400";
 @import "https://fonts.googleapis.com/css?family=Roboto:700,700i,300i,300";
+
 		
+h1 {
+ font-size: 38pt;
+font-family: Roboto;
+    font-size: 38pt;
+    line-height: 1.23;
+    font-weight: 400;
+text-transform: uppercase;
+
+	
+}
 * {
   box-sizing: border-box;
 }
