--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 
 		
 h1 {
- font-size: 38pt;
 font-family: Roboto;
     font-size: 25pt;
     line-height: 1.23;
-    font-weight: 1200;
-text-transform: uppercase;
-
-	
+    font-weight: 800;
+text-transform: uppercase;	
 }
+		
+h2 {
+font-family: Roboto;
+    font-size: 25pt;
+    line-height: 1.23;
+    font-weight: 400;
+text-transform: uppercase;	
+}		
+		
 * {
   box-sizing: border-box;
 }
@@ -60,7 +66,7 @@ height: 190px;
 <body>
 
 <div class="header">
-  <h1>SCHOOL OF PLANNING AND ARCHITECTURE DELHI<br/>Thesis 2019-2020</h1>
+  <h1>SCHOOL OF PLANNING AND ARCHITECTURE DELHI<br/></h1><h2>Thesis 2019-2020</h2>
 </div>
 
 <div class="content"> 
