--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1 {
 font-family: Roboto;
     font-size: 25pt;
     line-height: 1.23;
-    font-weight: 800;
+    font-weight: 600;
 text-transform: uppercase;	
 }
 		
@@ -21,7 +21,9 @@ font-family: Roboto;
     line-height: 1.23;
     font-weight: 400;
 text-transform: uppercase;	
-}		
+}	
+		
+
 		
 * {
   box-sizing: border-box;
@@ -46,6 +48,7 @@ body {
 p {
 	text-align: center;
 	margin-block-start: 0em;
+	font-family: Roboto;
 }
 
 iframe {
