--- a/index.html
+++ b/index.html
@@ -76,19 +76,22 @@ height: 190px;
 
 	
 	
-<div class="item"> <a href="https://drive.google.com/file/d/1j-n4WNtomfzrzVKOgExsj71Of_-Upn3y/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1tyOpXIbPJ9EHvrqWlGm58DuJtGlz27gZ"></a><p>Priyanka Yadav</p></div>
-<div class="item"> <a href="https://drive.google.com/file/d/1N3g1EJWv37PwTQixPk1HOKj-aBDBeOuW/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1yuW6bE5Wp27wiX-nl-z0i_c3APjgptvm"></a><p>Richa Singhal</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/147HzTVUMnSQ36JfOnh3NaHoImn1J58nx/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1dqd-b-8HiBIrcqKQOd_KLo55F-mSBcs6"></a><p>Nivia Jain</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1smcNaPLUhOYglqwygfxiMRWKQeg9OX8T/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1D1pyRWrYhJnAJKBKSbnJPlXUPP8QcsWc"></a><p>Veeresh Angiras</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1Z3aZ0a93pilmzzCEEEB1eMooCrosFQKR/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1H3hOkk6KSqdnc27G7Ef7Dw1RjH_V1XFi"></a><p>Sachin KM</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1JGMDzf2BVUW1qhDVymXHVLFFmOJWrmMr/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1BzNaD3ByTjrS1s4XuMQkK467fWuzCXVT"></a><p>Rozanne Jojo</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1YlaKWxtGj8eTNxFaOPXUQJJ80CURdte-/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1S2MelRhGRAsGUYBU0lrIb75CNcg7cMNL"></a><p>GayathriNair</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1IJXFoNe3YaA-t4gI686xh_eNQM5yx4ra/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1qBJeP_DapDdGd8tlp6h4syaIWtnFlU7k"></a><p>Manasa Nandini</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/19D0z2YKaVVkj2ymq28xTL88jfvt0TIBN/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Sr0msWEPCIzZSae5M8sVbsCWZBJmuBEF"></a><p>Harshita Jain</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1L_RAJhPRasSD4-tqNF08ZEni6j0kNZyM/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Mvx-4HPSW6rQC51mgvuSn07g8hy2Wj-V"></a><p>Anam Nasim</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1N3g1EJWv37PwTQixPk1HOKj-aBDBeOuW/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1yuW6bE5Wp27wiX-nl-z0i_c3APjgptvm"></a><p>Richa Singhal</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1O-jI-xRdjGGlqIQ2N3CDEzzkWhtz1mc_/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1P4LCdzPFvuAE5aBmQjJ_P9oDywlDS0xF"></a><p>Roahan Viswanathan</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1Ve-AqOSnIkmueLiEoCaF-AJse1riaYOK/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1EEexoP2nP4Zpqn9JRC4wvBz7vEqipEEM"></a><p>Gokul Gupta</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1YQwPGyYiiy0XHcEgs5YJem5OOD3W4F6k/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Al04EambTjfNKluGlz_arm-aKyv8PGc8"></a><p>Nikhil Sharma</p></div>
-<div class="item"> <a href="https://drive.google.com/file/d/19D0z2YKaVVkj2ymq28xTL88jfvt0TIBN/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Sr0msWEPCIzZSae5M8sVbsCWZBJmuBEF"></a><p>Harshita Jain</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1adNRiV_OgWte_qekat_J0gtDqhzX5aNS/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=16I3P4p_l5aAth_WpVDWWuYJoqohJgrYN"></a><p>Sonali Rane</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1cuTSmkZagFOFGaPoX18wopv2rm-dTR5U/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1TgK_co_B1AvLX4Pqy0XuN-bAHAParYgg"></a><p>Ritika Sharma</p></div>
-<div class="item"> <a href="https://drive.google.com/file/d/1tCo8X-DtLzEsI99KT8DGcMpnX4tEn7Cf/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Z05SPeA6Wpy4T7OOD8yguRn-S0_X_c4w"></a><p>Rajat Verma</p></div>
-<div class="item"> <a href="https://drive.google.com/file/d/1IJXFoNe3YaA-t4gI686xh_eNQM5yx4ra/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1qBJeP_DapDdGd8tlp6h4syaIWtnFlU7k"></a><p>Mansasa Nandini</p></div>
-<div class="item"> <a href="https://drive.google.com/file/d/1O-jI-xRdjGGlqIQ2N3CDEzzkWhtz1mc_/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1P4LCdzPFvuAE5aBmQjJ_P9oDywlDS0xF"></a><p>Roahan Viswanathan</p></div>	
-	
-	
+<div class="item"> <a href="https://drive.google.com/file/d/1j-n4WNtomfzrzVKOgExsj71Of_-Upn3y/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1tyOpXIbPJ9EHvrqWlGm58DuJtGlz27gZ"></a><p>Priyanka Yadav</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1tCo8X-DtLzEsI99KT8DGcMpnX4tEn7Cf/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Z05SPeA6Wpy4T7OOD8yguRn-S0_X_c4w"></a><p>Rajat Verma</p></div>	
 	
 	
 
