--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@ body {
 }
 
 .content{
+	margin: auto;
 	justify-content: center;
 	display: flex;
     flex-wrap: wrap;
-	max-width: 1100px;
+	max-width: 1300px;
 	
 }
 
