--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ height: 190px;
 
 <div class="content"> 
 
-	
-
+<div class="item"> <a href="https://drive.google.com/file/d/1NkxJwY_iRXtqALSTIGER0NKhmdqNUDLf/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1-lCfGeAy-S3hw9Z-7WWX_DbL_VDhGPWd"></a><p>Nandan Bhusry</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1M8b-gkkMsz5J3q8N20BJ-rs9cX65Ftab/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=17F3pUheTAv0fv_bOdjOESzx92Gbdic0Y"></a><p>Shivangini Kakkar</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/147HzTVUMnSQ36JfOnh3NaHoImn1J58nx/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1dqd-b-8HiBIrcqKQOd_KLo55F-mSBcs6"></a><p>Nivia Jain</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1smcNaPLUhOYglqwygfxiMRWKQeg9OX8T/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1D1pyRWrYhJnAJKBKSbnJPlXUPP8QcsWc"></a><p>Veeresh Angiras</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1Z3aZ0a93pilmzzCEEEB1eMooCrosFQKR/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1H3hOkk6KSqdnc27G7Ef7Dw1RjH_V1XFi"></a><p>Sachin KM</p></div>
