--- a/index.html
+++ b/index.html
@@ -81,13 +81,20 @@ height: 190px;
 
 <div class="content"> 
 
-<div class="item"> <a href="https://drive.google.com/file/d/1NkxJwY_iRXtqALSTIGER0NKhmdqNUDLf/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1-lCfGeAy-S3hw9Z-7WWX_DbL_VDhGPWd"></a><p>Nandan Bhusry</p></div>
+
+	
+<div class="item"> <a href="https://drive.google.com/file/d/1CkzdF_tTgt0NrvVwJfESpSEOOiXdGtm5/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1EV8_OhKTZHzR_0EZUcrLkKqeaJ3Y5M8n"></a><p>Rachana Dammala</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1FcPQO1pJjnVjWZLklva37D0kwthnqaVe/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1xmEY55oZTLdiohhaCHf8n9uIiVUZsNJk"></a><p>Mantavya</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1IlThsb7HKxJtZ_ubESoK_zoi8IrucG9X/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=13ujuxc1N4v4cfzKu6CYIsVWsMBmV0xW7"></a><p>Akshara Jayasimhan</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1e-G25Mso7h6jlQyk3BpkIGgCeKh1_LZW/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1snB7caYCct2DoN1xjLntvd9yy2wyF8jE"></a><p>Chinmay Karan</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1jQe8v_qSDnyxU6XKIymrb9MMCjM6t5wr/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1jYmdJrH6S-4BxkumUex-lM5vDqfR1TOv"></a><p>Srishti Jauhri</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1M8b-gkkMsz5J3q8N20BJ-rs9cX65Ftab/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=17F3pUheTAv0fv_bOdjOESzx92Gbdic0Y"></a><p>Shivangini Kakkar</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1NkxJwY_iRXtqALSTIGER0NKhmdqNUDLf/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1-lCfGeAy-S3hw9Z-7WWX_DbL_VDhGPWd"></a><p>Nandan Bhusry</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/147HzTVUMnSQ36JfOnh3NaHoImn1J58nx/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1dqd-b-8HiBIrcqKQOd_KLo55F-mSBcs6"></a><p>Nivia Jain</p></div>
-<div class="item"> <a href="https://drive.google.com/file/d/1smcNaPLUhOYglqwygfxiMRWKQeg9OX8T/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1D1pyRWrYhJnAJKBKSbnJPlXUPP8QcsWc"></a><p>Veeresh Angiras</p></div>
-<div class="item"> <a href="https://drive.google.com/file/d/1Z3aZ0a93pilmzzCEEEB1eMooCrosFQKR/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1H3hOkk6KSqdnc27G7Ef7Dw1RjH_V1XFi"></a><p>Sachin KM</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1JGMDzf2BVUW1qhDVymXHVLFFmOJWrmMr/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1BzNaD3ByTjrS1s4XuMQkK467fWuzCXVT"></a><p>Rozanne Jojo</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1YlaKWxtGj8eTNxFaOPXUQJJ80CURdte-/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1S2MelRhGRAsGUYBU0lrIb75CNcg7cMNL"></a><p>GayathriNair</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1Z3aZ0a93pilmzzCEEEB1eMooCrosFQKR/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1H3hOkk6KSqdnc27G7Ef7Dw1RjH_V1XFi"></a><p>Sachin KM</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1smcNaPLUhOYglqwygfxiMRWKQeg9OX8T/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1D1pyRWrYhJnAJKBKSbnJPlXUPP8QcsWc"></a><p>Veeresh Angiras</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1IJXFoNe3YaA-t4gI686xh_eNQM5yx4ra/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1qBJeP_DapDdGd8tlp6h4syaIWtnFlU7k"></a><p>Manasa Nandini</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/19D0z2YKaVVkj2ymq28xTL88jfvt0TIBN/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Sr0msWEPCIzZSae5M8sVbsCWZBJmuBEF"></a><p>Harshita Jain</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1L_RAJhPRasSD4-tqNF08ZEni6j0kNZyM/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Mvx-4HPSW6rQC51mgvuSn07g8hy2Wj-V"></a><p>Anam Nasim</p></div>
@@ -99,6 +106,9 @@ height: 190px;
 <div class="item"> <a href="https://drive.google.com/file/d/1cuTSmkZagFOFGaPoX18wopv2rm-dTR5U/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1TgK_co_B1AvLX4Pqy0XuN-bAHAParYgg"></a><p>Ritika Sharma</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1j-n4WNtomfzrzVKOgExsj71Of_-Upn3y/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1tyOpXIbPJ9EHvrqWlGm58DuJtGlz27gZ"></a><p>Priyanka Yadav</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1tCo8X-DtLzEsI99KT8DGcMpnX4tEn7Cf/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Z05SPeA6Wpy4T7OOD8yguRn-S0_X_c4w"></a><p>Rajat Verma</p></div>	
+	
+	
+	
 	
 	
 	
