--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@ height: 190px;
 
 
 	
+<div class="item"> <a href="https://drive.google.com/file/d/1JG4EntnX-Z0lDLMWm6BH2hale-o4gPl8/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1tusva9OzTwSNlKI8sDmg_pZC_UMrRRSG"></a><p>MANISH YADAV</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1LZlNrYGQklj0XywfJZYINEXq-TQ6fmpN/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1t1rXLaSkKXevqODiWUojjHe5iywD7QVr"></a><p>devkinandan</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1MrUnUzq2TElKGycz2I5hL1JnoSARW-ZZ/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1sYseLRA5Y3aQBawbpwLocvu4wfMl5ufv"></a><p>Syed Khwaja Abid</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1ZeNdxt9j6ZXtsx6kU2W4KIdiNYrYPjPs/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1kQEinAgr5LRcu3EfXFzx8w5eSGKg1W2u"></a><p>Kshitiz Goyal</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1dFXVVo8MaSywTqZi5K66VpgNrxloG5-u/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1UxwE1BCZsehSjYM6Ae4XLuoYo0n_Ml2O"></a><p>Aditya S Nath</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1ms8EKUTgPNdLb5WfNNEBNcOmNvY8GRv0/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1qpkNqXxJrcV1QC3_bN5_9jbLf8yyGgk8"></a><p>Maitri</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1nhNXFNCn9kAkxtGyZTmrthuTXKALf1fl/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1qCWoKkTzpTH5DPySUtLY3Ia9L3Hsy2oI"></a><p>utkarsh</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1r-ik25lyFkzknqGvQmjsNz3RAGTUUWEQ/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1V7oexXgESmrQvOme6g0SoQ9rBe-NGktd"></a><p>Aniruddh Sharan</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1znUdff04BV9ObJlk1AmlOkO2-nV6h5Wh/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1yw4UoQI5klTmniqp23imvDnr81V2nkLW"></a><p>Isha parate</p></div>
+<div class="item"> <a href="https://drive.google.com/file/d/1j-n4WNtomfzrzVKOgExsj71Of_-Upn3y/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1tyOpXIbPJ9EHvrqWlGm58DuJtGlz27gZ"></a><p>Priyanka Yadav</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1CkzdF_tTgt0NrvVwJfESpSEOOiXdGtm5/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1EV8_OhKTZHzR_0EZUcrLkKqeaJ3Y5M8n"></a><p>Rachana Dammala</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1FcPQO1pJjnVjWZLklva37D0kwthnqaVe/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1xmEY55oZTLdiohhaCHf8n9uIiVUZsNJk"></a><p>Mantavya</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1IlThsb7HKxJtZ_ubESoK_zoi8IrucG9X/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=13ujuxc1N4v4cfzKu6CYIsVWsMBmV0xW7"></a><p>Akshara Jayasimhan</p></div>
@@ -104,9 +114,7 @@ height: 190px;
 <div class="item"> <a href="https://drive.google.com/file/d/1YQwPGyYiiy0XHcEgs5YJem5OOD3W4F6k/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Al04EambTjfNKluGlz_arm-aKyv8PGc8"></a><p>Nikhil Sharma</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1adNRiV_OgWte_qekat_J0gtDqhzX5aNS/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=16I3P4p_l5aAth_WpVDWWuYJoqohJgrYN"></a><p>Sonali Rane</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1cuTSmkZagFOFGaPoX18wopv2rm-dTR5U/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1TgK_co_B1AvLX4Pqy0XuN-bAHAParYgg"></a><p>Ritika Sharma</p></div>
-<div class="item"> <a href="https://drive.google.com/file/d/1j-n4WNtomfzrzVKOgExsj71Of_-Upn3y/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1tyOpXIbPJ9EHvrqWlGm58DuJtGlz27gZ"></a><p>Priyanka Yadav</p></div>
 <div class="item"> <a href="https://drive.google.com/file/d/1tCo8X-DtLzEsI99KT8DGcMpnX4tEn7Cf/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Z05SPeA6Wpy4T7OOD8yguRn-S0_X_c4w"></a><p>Rajat Verma</p></div>	
-	
 	
 	
 	
