--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
-
-<!DOCTYPE html>
 <html>
 <head>
 	<style>
 @import "https://fonts.googleapis.com/css?family=Roboto+Condensed:700i,700,400";
 @import "https://fonts.googleapis.com/css?family=Roboto:700,700i,300i,300";
-
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800" 
 		
 h1 {
-font-family: Roboto;
-	
-}
+font-family: 'Poppins', sans-serif;
+text-transform: uppercase;	
+color: white;
+}	
+
 		
 h2 {
-font-family: Roboto;
-    font-size: 25pt;
+font-family: 'Poppins', sans-serif;
+    font-size: 15pt;
     line-height: 1.23;
-    font-weight: 400;
+    font-weight: 500;
 text-transform: uppercase;	
+color: white;
 }	
 		
 
@@ -27,8 +28,10 @@ text-transform: uppercase;
 }
 
 body {
+color: white;
   margin: 0;
-  font-family: Arial;
+font-family: 'Poppins', sans-serif;
+  background-color: black;
 }
 
 .header {
@@ -43,13 +46,17 @@ body {
 	display: flex;
     flex-wrap: wrap;
 	max-width: 1300px;
+	background-color: black;
 	
 }
 
 p {
 	text-align: center;
 	margin-block-start: 0em;
-	font-family: Roboto;
+font-family: 'Poppins', sans-serif;
+	color: white;
+	background-color: black;
+	margin-top: 0.5em;
 }
 
 iframe {
