--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ height: 190px;
 <div class="item"> <a href="https://bit.ly/2YeKIfL" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1jYmdJrH6S-4BxkumUex-lM5vDqfR1TOv"></a><p>Srishti Jauhri</p></div>
 <div class="item"> <a href="https://bit.ly/3iUObb4" target="_blank"> <img src="https://drive.google.com/thumbnail?id=19goZMUvQ0fRp3NnKCvdJoj9k9Lh93RVP"></a><p>Abdul Wahab</p></div>
 <div class="item"> <a href="https://bit.ly/324kWMd" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1qpkNqXxJrcV1QC3_bN5_9jbLf8yyGgk8"></a><p>Maitri</p></div>
-<div class="item"> <a href="https://bit.ly/3kVqNMG" target="_blank"> <img src="https://bit.ly/3hkqQiE"></a><p>Utkarsh</p></div>
+<div class="item"> <a href="https://bit.ly/3kVqNMG" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1qCWoKkTzpTH5DPySUtLY3Ia9L3Hsy2oI"></a><p>Utkarsh</p></div>
 <div class="item"> <a href="https://bit.ly/3aIcnec" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1UxwE1BCZsehSjYM6Ae4XLuoYo0n_Ml2O"></a><p>Aditya S Nath</p></div>
 <div class="item"> <a href="https://bit.ly/320Adhj" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1snB7caYCct2DoN1xjLntvd9yy2wyF8jE"></a><p>Chinmay Karan</p></div>
 <div class="item"> <a href="https://bit.ly/2FxLii9" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1tyOpXIbPJ9EHvrqWlGm58DuJtGlz27gZ"></a><p>Priyanka Yadav</p></div>
@@ -131,7 +131,6 @@ height: 190px;
 <div class="item"> <a href="https://bit.ly/3iXBtIZ" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Sr0msWEPCIzZSae5M8sVbsCWZBJmuBEF"></a><p>Harshita Jain</p></div>
 <div class="item"> <a href="https://bit.ly/3aBtSwL" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1Qptq7MA-3MwmD7WnsR10kW1nyNobktOw"></a><p>Faizan Ziyaudeen</p></div>
 <div class="item"> <a href="https://bit.ly/3g8ttmv" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1dqd-b-8HiBIrcqKQOd_KLo55F-mSBcs6"></a><p>Nivia Jain</p></div>	
-	
 	
 
 </div>
