--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ a:hover {
 	<body>
 		<div class="header">
 		  <h1><a href="index.html">SCHOOL OF PLANNING AND ARCHITECTURE DELHI</a><br/></h1>
-		  <h2><a href="index.html">Home</a> <a href="2019-2020.html">2019-2020</a> <a href="2020-2021.html">2020-2021</a><br/></h2></br>
+		  <h2><a href="index.html">Home</a> <a href="20.html">20</a> <a href="21.html">21</a><br/></h2></br>
 		  <p>add some text about the college  </p>
 		  
 		</div>
