--- a/index.html
+++ b/index.html
@@ -97,16 +97,13 @@ a:hover {
 	<body>
 		<div class="header">
 		  <h1><a href="index.html">SCHOOL OF PLANNING AND ARCHITECTURE DELHI</a><br/></h1>
+			<h2><a href="index.html">Home</a> <a href="2019-2020.html">2019-2020</a> <a href="2020-2021.html">2020-2021</a><br/></h2></br>
+		<p>add text  </p>
 		</div>
 	
 	
 	
-	
-		<div class="content"> 
-			<div class="item"> <a href="2019-2020.html" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1D1pyRWrYhJnAJKBKSbnJPlXUPP8QcsWc"></a><p>2019-2020</p></div>			
-			<div class="item"> <a href="2020-2021.html" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1D1pyRWrYhJnAJKBKSbnJPlXUPP8QcsWc"></a><p>2020-2021</p></div>			
-		</div>
-	
+
 	
 	
 	
