added for 2021-20 batch

--- a/2020-2021.html
+++ b/2020-2021.html
@@ -98,15 +98,9 @@ a:hover {
 		<div class="header">
 		  <h1><a href="index.html">SCHOOL OF PLANNING AND ARCHITECTURE DELHI</a><br/></h1>
 			<h2><a href="index.html">Home</a> <a href="2019-2020.html">2019-2020</a> <a href="2020-2021.html">2020-2021</a><br/></h2></br>
-		<p>add text  </p>
 		</div>
-	
-	
-	
-
-	
-	
-	
-	
+		<div class="content"> 
+			<div class="item"> <a href="https://drive.google.com/file/d/1lpdKR_cDQbZsQwqfxKtsqI_Yg_YQsN1b/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=19goZMUvQ0fRp3NnKCvdJoj9k9Lh93RVP"></a><p>ADD items here</p></div>	
+		</div>
 	</body>
 </html>
