--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ a:hover {
 		  <h1><a href="index.html">SCHOOL OF PLANNING AND ARCHITECTURE DELHI</a><br/></h1>
 			<h2><a href="index.html">2019-2020</a> <br/></h2></br>
 		</div>
+	website will be switching to https://bit.ly/2ULy9tv from August 2021
 		<div class="content"> 
 			<div class="item"> <a href="https://drive.google.com/file/d/1lpdKR_cDQbZsQwqfxKtsqI_Yg_YQsN1b/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=19goZMUvQ0fRp3NnKCvdJoj9k9Lh93RVP"></a><p>Abdul Wahab</p></div>
 			<div class="item"> <a href="https://drive.google.com/file/d/1PbX3W5_vatCVR2Kr95tZ0CGtScxZ8vKm/preview" target="_blank"> <img src="https://drive.google.com/thumbnail?id=1v24yVVbaRFBFTDVni9f_h4gu3GbVcO7n"></a><p>Abhinav Sujit</p></div>
